--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,10 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  list-style: none;
 }
 a:hover {
-  color: #535bf2;
+  color: #7b81ee;
 }
 
 body {
@@ -28,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(51, 51, 51) !important;
 }
 
 h1 {
@@ -66,3 +68,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
