--- a/src/components/Partidas.css
+++ b/src/components/Partidas.css
@@ -6,6 +6,9 @@
   max-width: 1200px; /* Ancho máximo para la tabla */
   margin: 0 auto; /* Centra la tabla horizontalmente */
   border-radius: 15px;
+  font-family: "VT323", monospace;
+	font-size: 30px;
+  
 }
 
 .custom-table th,
