tarea3 creacion de piezas

--- a/src/components/Partidas.css
+++ b/src/components/Partidas.css
@@ -10,7 +10,10 @@
 	font-size: 30px;
   
 }
-
+h2{
+  font-family: "VT323", monospace;
+  color: white;
+}
 .custom-table th,
 .custom-table td {
   padding: 1.5rem; /* Aumenta el relleno en las celdas */
@@ -27,7 +30,8 @@
 
 
 .btn-agregar{
-  background-color: rgb(73, 209, 214) !important;
+  font-family: "VT323", monospace!important;
+  font-size: 30px !important;
   margin-top: 50px;
   color: rgb(50, 43, 158);
 }
