--- a/src/components/Panel.css
+++ b/src/components/Panel.css
@@ -4,12 +4,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(/pixelAnimado.gif); /* Ruta correcta */
-  background-size: cover; /* El fondo cubrirá todo el contenedor */
+  background-image: url(/pixelAnimado.gif); 
+  background-size: cover; /* El fondo cubre todo el contenedor */
   background-position: center; /* Centra el fondo */
   background-repeat: no-repeat; /* Evita que el fondo se repita */
-  width: 100%; /* Asegura que ocupe todo el ancho del contenedor */
-  height: 100%; /* Asegura que ocupe todo el alto del contenedor */
+  width: 100%; /* ocupa todo el ancho del contenedor */
+  height: 100%; /* ocupa todo el alto del contenedor */
   border: 2px solid #444; /* Mantén los bordes del tablero */
 }
 
@@ -21,10 +21,10 @@
 
 /* Celdas del tablero */
 .panel-cell {
-  width: 40px; /* Aumentar el tamaño de las celdas */
-  height: 40px; /* Aumentar el tamaño de las celdas */
-  border: 1px solid #444; /* Bordes de las celdas */
-  background-color: #000; /* Fondo negro */
+  width: 40px; 
+  height: 40px; 
+  border: 1px solid #444; 
+  background-color: #000; 
 }
 
 /* Bordes del tablero */
