--- a/src/components/Panel.css
+++ b/src/components/Panel.css
@@ -5,12 +5,12 @@
   justify-content: center;
   align-items: center;
   background-image: url(/pixelAnimado.gif); 
-  background-size: cover; /* El fondo cubre todo el contenedor */
-  background-position: center; /* Centra el fondo */
-  background-repeat: no-repeat; /* Evita que el fondo se repita */
-  width: 100%; /* ocupa todo el ancho del contenedor */
-  height: 100%; /* ocupa todo el alto del contenedor */
-  border: 2px solid #444; /* Mantén los bordes del tablero */
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  width: 100%; 
+  height: 100%; 
+  border: 2px solid #444; 
 }
 
 
